docs: Update README.md

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 PORT = 3000
 
-DATABASE_URL="postgresql://docker:docker@localhost:5432/api-filmes?schema=public"
+DATABASE_URL_PROD="postgresql://docker:docker@localhost:5432/api-filmes?schema=public"
 
 JWT_SECRET="IRINEU"
+
+#BANCO DE DADOS PARA TESTES
+DATABASE_URL_TEST="postgresql://docker:docker@localhost:5432/api-filmes-teste?schema=public"
